# tinyrenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: Polygon3D.cc  Polygon3D.h  geometry.h  geometry_test.cc  main.cc  mesh.cc  mesh.h  mesh_test.cc  point.h  point3d.h  sdl_context_2d.cc  sdl_context_2d.h  vec.cc  vec.h  vec_test.cc
